# WaveletReconstruction

./: CMakeLists.txt  Doxyfile  README  WaveletReconstruction.kdevelop.pcs  array2d.h  average.cpp  blur.cpp  coeffs_daub4.cpp  coeffs_haar.cpp  common.h  config.txt  connectneighbors.cpp  eval_daub4.cpp  eval_haar.cpp  global.cpp  global.h  main.cpp  marchingcubes.cpp  matrix.cpp  matrix.h  octnode.cpp  octtree.cpp  parse.cpp  parse.h  plane.cpp  prune.cpp  readpts.cpp  reconstruct.cpp  reconstruct.h  streamingvisitor.cpp  traverse.cpp  vect.h  vtkWaveletReconstruction.cxx  vtkWaveletReconstruction.h  vtkWaveletReconstruction.xml
paper/: vtkWaveletReconstruction.tex
plugin/: CMakeLists.txt
